# adminNexus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose-test-db.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  test.js  turbo.json
.github/workflows/: buildAndTest.yml  dockerPush.yml
__e2e__/: package.json  tsconfig.json
__e2e__/__e2e__/: e2e.logger.api.ts  stress.logger.api.ts  stressTest.ts
apps/backend/: package.json  pnpm-lock.yaml
apps/backend/prisma/: reset.js  schema.prisma
apps/backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  log.service.ts
apps/web/: package-lock.json  package.json
apps/web/docs/: introduction.md
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: footer.tsx  header.tsx
apps/web/src/types/: feedback.ts  logging.ts  stats.ts
core/db-handler/: Cargo.toml
core/db-handler/src/: lib.rs
core/github-handler/: Cargo.toml
core/logInjestor/: Cargo.toml
core/log_injestor/: Cargo.toml
core/log_injestor/src/: config.rs  logger.rs
core/prisma/: Cargo.toml
core/prisma/src/: lib.rs
core/prisma/src/test-migrations/: 01_setup.sql
core/telegram-messenger/: Cargo.toml
scripts/: dockerBuild.sh  pushToHub.sh  updateVersion.sh
sdk/adminNexus.js/: package-lock.json  package.json
sdk/adminNexus.js/example/: index.ts
sdk/adminNexus.js/src/: logger.ts
server/: Cargo.toml
server/src/: log_handler.rs  main.rs
server/src/log_injestor/: log_handler.rs  mod.rs  types.rs
website/: package-lock.json  package.json  pnpm-lock.yaml
(+36 files in other folders)
